--- a/gallery.html
+++ b/gallery.html
@@ -18,10 +18,10 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661037247976">
+  <link rel="stylesheet" href="dist/style.css?cb=1661075711786">
 </head>
 
-<body class="gallery-body">
+<body class="body">
 
   <header class="header">
     <nav class="nav-wrapper">
@@ -111,7 +111,7 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661037247976"></script>
+  <script src="dist/all.js?cb=1661075711786"></script>
   <script>
     const galleryPhotos = document.querySelector('.gallery-photos');
     const photoTrip = galleryPhotos.querySelectorAll('.photos-trip');
