--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661037247976">
+  <link rel="stylesheet" href="dist/style.css?cb=1661075711786">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
         <a href="#" class="nav-links">Beslenme</a>
         <a href="#" class="nav-links">Duyurular</a>
         <a href="./gallery.html" class="nav-links">Galeri</a>
-        <a href="#" class="nav-links">İletişim</a>
+        <a href="./contact.html" class="nav-links">İletişim</a>
       </div>
     </nav>
     <nav class="nav-mobil-wrapper">
@@ -57,7 +57,7 @@
               <li><a href="#">Beslenme</a></li>
               <li><a href="#">Duyurular</a></li>
               <li><a href="./gallery.html">Galeri</a></li>
-              <li><a href="#">İletişim</a></li>
+              <li><a href="./contact.html">İletişim</a></li>
             </ul>
           </div>
         </div>
@@ -258,7 +258,7 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661037247976"></script>
+  <script src="dist/all.js?cb=1661075711786"></script>
   <script>
     const galleryPhotos = document.querySelector('.gallery-photos');
     const photoTrip = galleryPhotos.querySelectorAll('.photos-trip');
