--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,15 @@
   <meta name="theme-color" content="#1843c1" />
   <meta name="apple-mobile-web-app-status-bar-style" content="#1843c1">
   <link rel="icon" href="./img/3.svg">
+  <link rel="stylesheet" href="./files/all.css">
 
-  <title>Ataşehir DenizAltı International Anaokulu</title>
+  <title>Bize Ulaşın</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661075924640">
+  <link rel="stylesheet" href="dist/style.css?cb=1661081941447">
 </head>
 
 <body class="body">
@@ -72,30 +73,33 @@
         <div class="contact-wrapper">
           <form class="contact-form">
             <div class="form-label">
-              <label for=""></label>
-              <input type="text">
+              <label for="fullname">Ad Soyad;</label>
+              <input placeholder="Adınız Soyadınız" type="text" id="fullname" autocomplete="off">
             </div>
             <div class="form-label">
-              <label for=""></label>
-              <input type="email" name="" id="">
+              <label for="email">E-Mail;</label>
+              <input placeholder="abc@mail.com" type="email" id="email" autocomplete="off">
             </div>
             <div class="form-label">
-              <label for=""></label>
-              <textarea name="" id=""></textarea>
+              <label for="textarea">Söylemek istedikleriniz;</label>
+              <textarea placeholder="İçinizi dökün gitsin" id="textarea" autocomplete="off"></textarea>
             </div>
           </form>
           <div class="contact-info-wrapper">
             <div class="contact-info">
-              <span class="contact-info-headline"></span>
-              <span class="contact-info-text"></span>
+              <span class="contact-info-headline"><i class="fal fa-phone"></i> Bizi Arayın</span>
+              <span class="contact-info-text">
+                <p>+90 216 456 62 89</p>
+                <p>+90 552 250 62 89</p>
+              </span>
             </div>
             <div class="contact-info">
-              <span class="contact-info-headline"></span>
-              <span class="contact-info-text"></span>
+              <span class="contact-info-headline"><i class="fal fa-map-marker-alt"></i> Bize Gelin</span>
+              <p class="contact-info-text">Atatürk Mahallesi / Mustafa Kemal Caddesi No:15 / Ataşehir / İSTANBUL</p>
             </div>
             <div class="contact-info">
-              <span class="contact-info-headline"></span>
-              <span class="contact-info-text"></span>
+              <span class="contact-info-headline"><i class="fal fa-envelope"></i> Bizi Mailleyin</span>
+              <span class="contact-info-text">info@denizaltianaokulu.com</span>
             </div>
           </div>
         </div>
@@ -120,7 +124,7 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661075924640"></script>
+  <script src="dist/all.js?cb=1661081941447"></script>
   <script>
     const galleryPhotos = document.querySelector('.gallery-photos');
     const photoTrip = galleryPhotos.querySelectorAll('.photos-trip');
