--- a/announcement.html
+++ b/announcement.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="./img/3.svg">
   <link rel="stylesheet" href="./files/all.css">
 
-  <title>Bize Ulaşın</title>
+  <title>Duyurular</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
@@ -36,9 +36,9 @@
       </a>
       <div class="nav-container">
         <a href="./nutrition.html" class="nav-links">Beslenme</a>
-        <a href="./announcement.html" class="nav-links">Duyurular</a>
+        <a class="nav-links selected">Duyurular</a>
         <a href="./gallery.html" class="nav-links">Galeri</a>
-        <a class="nav-links selected">İletişim</a>
+        <a href="./contact.html" class="nav-links">İletişim</a>
       </div>
     </nav>
     <nav class="nav-mobil-wrapper">
@@ -57,9 +57,9 @@
               <li><a href="./whatAreWeDoing.html">Neler Yapıyoruz</a></li>
               <li><a href="./classes.html">Sınıflarımız</a></li>
               <li><a href="./nutrition.html">Beslenme</a></li>
-              <li><a href="./announcement.html">Duyurular</a></li>
+              <li><a class="selected">Duyurular</a></li>
               <li><a href="./gallery.html">Galeri</a></li>
-              <li><a class="selected">İletişim</a></li>
+              <li><a href="./contact.html">İletişim</a></li>
             </ul>
           </div>
         </div>
@@ -69,37 +69,56 @@
 
   <main>
     <div class="content">
-      <div class="contact">
-        <div class="contact-wrapper">
-          <form class="contact-form">
-            <div class="form-label">
-              <label for="fullname">Ad Soyad;</label>
-              <input placeholder="Adınız Soyadınız" type="text" id="fullname" autocomplete="off">
+      <div class="announcement">
+        <h2 class="announcement-headline"><i class="fal fa-scroll"></i> Duyurular</h2>
+        <div class="announcement-wrapper">
+          <div class="announcement-info">
+            <div class="announcement-info-content-headline">
+              <span class="headline-head">Kaynaşma Etkinliği</span>
+              <span class="headline-date">24.08.2022</span>
             </div>
-            <div class="form-label">
-              <label for="email">E-Mail;</label>
-              <input placeholder="abc@mail.com" type="email" id="email" autocomplete="off">
+            <div class="announcement-info-content-text">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae porro repudiandae fugiat suscipit,
+                reiciendis voluptatum sint quaerat illum architecto placeat?
+              </p>
             </div>
-            <div class="form-label">
-              <label for="textarea">Söylemek istedikleriniz;</label>
-              <textarea placeholder="İçinizi dökün gitsin" id="textarea" autocomplete="off"></textarea>
+          </div>
+          <div class="announcement-info">
+            <div class="announcement-info-content-headline">
+              <span class="headline-head">Konser Etkinliği</span>
+              <span class="headline-date">14.09.2022</span>
             </div>
-          </form>
-          <div class="contact-info-wrapper">
-            <div class="contact-info">
-              <span class="contact-info-headline"><i class="fal fa-phone"></i> Bizi Arayın</span>
-              <span class="contact-info-text">
-                <p>+90 216 456 62 89</p>
-                <p>+90 552 250 62 89</p>
-              </span>
+            <div class="announcement-info-content-text">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae porro repudiandae fugiat suscipit,
+                reiciendis voluptatum sint quaerat illum architecto placeat?
+              </p>
             </div>
-            <div class="contact-info">
-              <a style="text-decoration: none;" href="#" class="contact-info-headline"><i class="fal fa-map-marker-alt"></i> Bize Gelin (Tıkla, yerimiz haritada açığa çıksın!)</a>
-              <p class="contact-info-text">Atatürk Mahallesi / Mustafa Kemal Caddesi No:15 / Ataşehir / İSTANBUL</p>
+          </div>
+          <div class="announcement-info">
+            <div class="announcement-info-content-headline">
+              <span class="headline-head">Kermes Etkinliği</span>
+              <span class="headline-date">02.09.2022</span>
             </div>
-            <div class="contact-info">
-              <span class="contact-info-headline"><i class="fal fa-envelope"></i> Bizi Mailleyin</span>
-              <span class="contact-info-text">info@denizaltianaokulu.com</span>
+            <div class="announcement-info-content-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem architecto nostrum!
+              </p>
+            </div>
+          </div>
+          <div class="announcement-info">
+            <div class="announcement-info-content-headline">
+              <span class="headline-head">Uyumlama Etkinliği</span>
+              <span class="headline-date">29.08.2022</span>
+            </div>
+            <div class="announcement-info-content-text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorem corporis tempora modi iusto illum
+                voluptates. Iusto quam et at natus minima, tenetur eveniet officiis ipsam minus! Eveniet provident
+                mollitia necessitatibus minus veniam ea impedit fugiat inventore tenetur maiores similique pariatur
+                asperiores, explicabo optio officia ipsa quae numquam accusamus?
+              </p>
             </div>
           </div>
         </div>
