--- a/whatAreWeDoing.html
+++ b/whatAreWeDoing.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="./img/3.svg">
   <link rel="stylesheet" href="./files/all.css">
 
-  <title>Bize Ulaşın</title>
+  <title>Neler Yapıyoruz</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
@@ -28,7 +28,7 @@
     <nav class="nav-wrapper">
       <div class="nav-container">
         <a href="./whoAreWe.html" class="nav-links">Biz Kimiz</a>
-        <a href="./whatAreWeDoing.html" class="nav-links">Neler Yapıyoruz</a>
+        <a class="nav-links selected">Neler Yapıyoruz</a>
         <a href="./classes.html" class="nav-links">Sınıflarımız</a>
       </div>
       <a href="./index.html" class="nav-logo">
@@ -38,7 +38,7 @@
         <a href="./nutrition.html" class="nav-links">Beslenme</a>
         <a href="./announcement.html" class="nav-links">Duyurular</a>
         <a href="./gallery.html" class="nav-links">Galeri</a>
-        <a class="nav-links selected">İletişim</a>
+        <a href="./contact.html" class="nav-links">İletişim</a>
       </div>
     </nav>
     <nav class="nav-mobil-wrapper">
@@ -54,12 +54,12 @@
             <ul class="nav-bar-links-mobil">
               <li><a href="./index.html">Ana Sayfa</a></li>
               <li><a href="./whoAreWe.html">Biz Kimiz</a></li>
-              <li><a href="./whatAreWeDoing.html">Neler Yapıyoruz</a></li>
+              <li><a class="selected">Neler Yapıyoruz</a></li>
               <li><a href="./classes.html">Sınıflarımız</a></li>
               <li><a href="./nutrition.html">Beslenme</a></li>
               <li><a href="./announcement.html">Duyurular</a></li>
               <li><a href="./gallery.html">Galeri</a></li>
-              <li><a class="selected">İletişim</a></li>
+              <li><a href="./contact.html">İletişim</a></li>
             </ul>
           </div>
         </div>
@@ -69,41 +69,6 @@
 
   <main>
     <div class="content">
-      <div class="contact">
-        <div class="contact-wrapper">
-          <form class="contact-form">
-            <div class="form-label">
-              <label for="fullname">Ad Soyad;</label>
-              <input placeholder="Adınız Soyadınız" type="text" id="fullname" autocomplete="off">
-            </div>
-            <div class="form-label">
-              <label for="email">E-Mail;</label>
-              <input placeholder="abc@mail.com" type="email" id="email" autocomplete="off">
-            </div>
-            <div class="form-label">
-              <label for="textarea">Söylemek istedikleriniz;</label>
-              <textarea placeholder="İçinizi dökün gitsin" id="textarea" autocomplete="off"></textarea>
-            </div>
-          </form>
-          <div class="contact-info-wrapper">
-            <div class="contact-info">
-              <span class="contact-info-headline"><i class="fal fa-phone"></i> Bizi Arayın</span>
-              <span class="contact-info-text">
-                <p>+90 216 456 62 89</p>
-                <p>+90 552 250 62 89</p>
-              </span>
-            </div>
-            <div class="contact-info">
-              <a style="text-decoration: none;" href="#" class="contact-info-headline"><i class="fal fa-map-marker-alt"></i> Bize Gelin (Tıkla, yerimiz haritada açığa çıksın!)</a>
-              <p class="contact-info-text">Atatürk Mahallesi / Mustafa Kemal Caddesi No:15 / Ataşehir / İSTANBUL</p>
-            </div>
-            <div class="contact-info">
-              <span class="contact-info-headline"><i class="fal fa-envelope"></i> Bizi Mailleyin</span>
-              <span class="contact-info-text">info@denizaltianaokulu.com</span>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </main>
 
