--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661081941447">
+  <link rel="stylesheet" href="dist/style.css?cb=1661104047354">
 </head>
 
 <body class="body">
@@ -26,17 +26,17 @@
   <header class="header">
     <nav class="nav-wrapper">
       <div class="nav-container">
-        <a href="#" class="nav-links">Biz Kimiz</a>
-        <a href="#" class="nav-links">Neler Yapıyoruz</a>
-        <a href="#" class="nav-links">Sınıflarımız</a>
+        <a href="./whoAreWe.html" class="nav-links">Biz Kimiz</a>
+        <a href="./whatAreWeDoing.html" class="nav-links">Neler Yapıyoruz</a>
+        <a href="./classes.html" class="nav-links">Sınıflarımız</a>
       </div>
       <a href="./index.html" class="nav-logo">
         <img src="./img/logo.svg" alt="Logo">
       </a>
       <div class="nav-container">
-        <a href="#" class="nav-links">Beslenme</a>
-        <a href="#" class="nav-links">Duyurular</a>
-        <a href="#" class="nav-links">Galeri</a>
+        <a href="./nutrition.html" class="nav-links">Beslenme</a>
+        <a href="./announcement.html" class="nav-links">Duyurular</a>
+        <a class="nav-links selected">Galeri</a>
         <a href="./contact.html" class="nav-links">İletişim</a>
       </div>
     </nav>
@@ -52,12 +52,12 @@
           <div class="nav-bar-mobil">
             <ul class="nav-bar-links-mobil">
               <li><a href="./index.html">Ana Sayfa</a></li>
-              <li><a href="#">Biz Kimiz</a></li>
-              <li><a href="#">Neler Yapıyoruz</a></li>
-              <li><a href="#">Sınıflarımız</a></li>
-              <li><a href="#">Beslenme</a></li>
-              <li><a href="#">Duyurular</a></li>
-              <li><a class="selected" href="#">Galeri</a></li>
+              <li><a href="./whoAreWe.html">Biz Kimiz</a></li>
+              <li><a href="./whatAreWeDoing.html">Neler Yapıyoruz</a></li>
+              <li><a href="./classes.html">Sınıflarımız</a></li>
+              <li><a href="./nutrition.html">Beslenme</a></li>
+              <li><a href="./announcement.html">Duyurular</a></li>
+              <li><a class="selected">Galeri</a></li>
               <li><a href="./contact.html">İletişim</a></li>
             </ul>
           </div>
@@ -71,24 +71,24 @@
       <div class="gallery">
         <h2 class="gallery-headline">Galeri</h2>
         <div class="gallery-links">
-          <div onclick="galleryAllFilter()" class="gallery-link">Tümü</div>
-          <div onclick="galleryTripFilter()" class="gallery-link">Geziler</div>
-          <div onclick="galleryActivityFilter()" class="gallery-link">Etkinlikler</div>
-          <div onclick="galleryRedLetterDayFilter()" class="gallery-link">Önemli Günler</div>
+          <div id="all-link" onclick="galleryAllFilter()" class="gallery-link selected">Tümü</div>
+          <div id="trip-link" onclick="galleryTripFilter()" class="gallery-link">Geziler</div>
+          <div id="activity-link" onclick="galleryActivityFilter()" class="gallery-link">Etkinlikler</div>
+          <div id="red-day-link" onclick="galleryRedLetterDayFilter()" class="gallery-link">Önemli Günler</div>
         </div>
         <div class="gallery-photos">
-          <img class="photos-trip" src="./img/picsum/1.jpg" alt="">
-          <img class="photos-trip" src="./img/picsum/2.jpg" alt="">
-          <img class="photos-trip" src="./img/picsum/3.jpg" alt="">
-          <img class="photos-activity" src="./img/picsum/4.jpg" alt="">
-          <img class="photos-activity" src="./img/picsum/5.jpg" alt="">
-          <img class="photos-activity" src="./img/picsum/6.jpg" alt="">
-          <img class="photos-activity" src="./img/picsum/7.jpg" alt="">
-          <img class="photos-red-letter-day" src="./img/picsum/8.jpg" alt="">
-          <img class="photos-red-letter-day" src="./img/picsum/9.jpg" alt="">
-          <img class="photos-red-letter-day" src="./img/picsum/10.jpg" alt="">
-          <img class="photos-red-letter-day" src="./img/picsum/11.jpg" alt="">
-          <img class="photos-activity" src="./img/picsum/12.jpg" alt="">
+          <img class="photos photos-trip" src="./img/picsum/1.jpg" alt="">
+          <img class="photos photos-trip" src="./img/picsum/2.jpg" alt="">
+          <img class="photos photos-trip" src="./img/picsum/3.jpg" alt="">
+          <img class="photos photos-activity" src="./img/picsum/4.jpg" alt="">
+          <img class="photos photos-activity" src="./img/picsum/5.jpg" alt="">
+          <img class="photos photos-activity" src="./img/picsum/6.jpg" alt="">
+          <img class="photos photos-activity" src="./img/picsum/7.jpg" alt="">
+          <img class="photos photos-red-letter-day" src="./img/picsum/8.jpg" alt="">
+          <img class="photos photos-red-letter-day" src="./img/picsum/9.jpg" alt="">
+          <img class="photos photos-red-letter-day" src="./img/picsum/10.jpg" alt="">
+          <img class="photos photos-red-letter-day" src="./img/picsum/11.jpg" alt="">
+          <img class="photos photos-activity" src="./img/picsum/12.jpg" alt="">
         </div>
       </div>
     </div>
@@ -111,32 +111,57 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661081941447"></script>
+  <script src="dist/all.js?cb=1661104047354"></script>
   <script>
     const galleryPhotos = document.querySelector('.gallery-photos');
+    const photos = document.querySelectorAll('.photos');
     const photoTrip = galleryPhotos.querySelectorAll('.photos-trip');
     const photoActivity = galleryPhotos.querySelectorAll('.photos-activity');
     const photoRedLetterDay = galleryPhotos.querySelectorAll('.photos-red-letter-day');
+    const all = document.getElementById('all-link');
+    const trip = document.getElementById('trip-link');
+    const activity = document.getElementById('activity-link');
+    const redDayLetter = document.getElementById('red-day-link');
 
     function galleryAllFilter() {
+      all.classList.add('selected');
+      trip.classList.remove('selected');
+      activity.classList.remove('selected');
+      redDayLetter.classList.remove('selected');
+
       photoTrip.forEach(n => n.classList.remove('close'));
       photoActivity.forEach(n => n.classList.remove('close'));
       photoRedLetterDay.forEach(n => n.classList.remove('close'));
     }
 
     function galleryTripFilter() {
+      all.classList.remove('selected');
+      trip.classList.add('selected');
+      activity.classList.remove('selected');
+      redDayLetter.classList.remove('selected');
+
       photoTrip.forEach(n => n.classList.remove('close'));
       photoActivity.forEach(n => n.classList.add('close'));
       photoRedLetterDay.forEach(n => n.classList.add('close'));
     }
 
     function galleryActivityFilter() {
+      all.classList.remove('selected');
+      trip.classList.remove('selected');
+      activity.classList.add('selected');
+      redDayLetter.classList.remove('selected');
+
       photoTrip.forEach(n => n.classList.add('close'));
       photoActivity.forEach(n => n.classList.remove('close'));
       photoRedLetterDay.forEach(n => n.classList.add('close'));
     }
 
     function galleryRedLetterDayFilter() {
+      all.classList.remove('selected');
+      trip.classList.remove('selected');
+      activity.classList.remove('selected');
+      redDayLetter.classList.add('selected');
+
       photoTrip.forEach(n => n.classList.add('close'));
       photoActivity.forEach(n => n.classList.add('close'));
       photoRedLetterDay.forEach(n => n.classList.remove('close'));
