--- a/classes.html
+++ b/classes.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661104047354">
+  <link rel="stylesheet" href="dist/style.css?cb=1661120249391">
 </head>
 
 <body class="body">
@@ -70,71 +70,67 @@
   <main>
     <div class="content">
       <div class="classes">
+        <h2 class="classes-headline">Sınıflarımızı Tanıyalım</h2>
         <div class="classes-wrapper">
           <div class="classes-age-groups">
             <div class="age-groups">
               <img src="./img/frame.svg" alt="Classes to Age Groups">
               <span>
-                2-3 Yaş Grubu Sınıfımız
+                Play & Learn
               </span>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit laboriosam architecto. A, ullam
-              tempore nesciunt vero, sapiente adipisci maiores dolores sequi possimus debitis assumenda pariatur alias
-              amet modi corporis.
-            </p>
+            <div class="age-text">
+              <h3>2 Yaş Sınıfımız</h3>
+              <h4>Koala</h4>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+            </div>
           </div>
           <div class="classes-age-groups">
             <div class="age-groups">
               <img src="./img/frame.svg" alt="Classes to Age Groups">
               <span>
-                3-4 Yaş Grubu Sınıfımız
+                Creativity
               </span>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit laboriosam architecto. A, ullam
-              tempore nesciunt vero, sapiente adipisci maiores dolores sequi possimus debitis assumenda pariatur alias
-              amet modi corporis.
-            </p>
+            <div class="age-text">
+              <h3>3 Yaş Sınıfımız</h3>
+              <h4>Arı</h4>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+            </div>
           </div>
           <div class="classes-age-groups">
             <div class="age-groups">
               <img src="./img/frame.svg" alt="Classes to Age Groups">
               <span>
-                4-5 Yaş Grubu Sınıfımız
+                Discovery
               </span>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit laboriosam architecto. A, ullam
-              tempore nesciunt vero, sapiente adipisci maiores dolores sequi possimus debitis assumenda pariatur alias
-              amet modi corporis.
-            </p>
+            <div class="age-text">
+              <h3>4 Yaş Sınıfımız</h3>
+              <h4>Bilgili Baykuş</h4>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
+            </div>
           </div>
           <div class="classes-age-groups">
             <div class="age-groups">
               <img src="./img/frame.svg" alt="Classes to Age Groups">
               <span>
-                5-6 Yaş Grubu Sınıfımız
+                Pre-School
               </span>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit laboriosam architecto. A, ullam
-              tempore nesciunt vero, sapiente adipisci maiores dolores sequi possimus debitis assumenda pariatur alias
-              amet modi corporis.
-            </p>
-          </div>
-          <div class="classes-age-groups">
-            <div class="age-groups">
-              <img src="./img/frame.svg" alt="Classes to Age Groups">
-              <span>
-                6-7 Yaş Grubu Sınıfımız
-              </span>
+            <div class="age-text">
+              <h3>5 Yaş Sınıfımız</h3>
+              <h4>Dalgıç Maymun</h4>
+              <p>
+                Lorem ipsum dolor sit amet.
+              </p>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit laboriosam architecto. A, ullam
-              tempore nesciunt vero, sapiente adipisci maiores dolores sequi possimus debitis assumenda pariatur alias
-              amet modi corporis.
-            </p>
           </div>
         </div>
       </div>
@@ -158,7 +154,7 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661104047354"></script>
+  <script src="dist/all.js?cb=1661120249391"></script>
 </body>
 
 </html>
