--- a/nutrition.html
+++ b/nutrition.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661104047354">
+  <link rel="stylesheet" href="dist/style.css?cb=1661120249391">
 </head>
 
 <body class="body">
@@ -70,7 +70,7 @@
   <main>
     <div class="content">
       <div class="container">
-        <h2>Aylık Beslenme Listesi <small>Eylül 2022</small></h2>
+        <h2 class="nutrition-headline">Aylık Beslenme Listesi <small>Eylül 2022</small></h2>
         <ul class="responsive-table">
           <li class="table-header">
             <div class="col col-1">Tarih</div>
@@ -280,7 +280,7 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661104047354"></script>
+  <script src="dist/all.js?cb=1661120249391"></script>
 </body>
 
 </html>
