--- a/classes.html
+++ b/classes.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661120401689">
+  <link rel="stylesheet" href="dist/style.css?cb=1661710416974">
 </head>
 
 <body class="body">
@@ -74,7 +74,7 @@
         <div class="classes-wrapper">
           <div class="classes-age-groups">
             <div class="age-groups">
-              <img src="./img/frame.svg" alt="Classes to Age Groups">
+              <img src="./img/classes/koala.jpeg" alt="Classes to Age Groups">
               <span>
                 Play & Learn
               </span>
@@ -89,7 +89,7 @@
           </div>
           <div class="classes-age-groups">
             <div class="age-groups">
-              <img src="./img/frame.svg" alt="Classes to Age Groups">
+              <img src="./img/classes/ari.jpeg" alt="Classes to Age Groups">
               <span>
                 Creativity
               </span>
@@ -104,7 +104,7 @@
           </div>
           <div class="classes-age-groups">
             <div class="age-groups">
-              <img src="./img/frame.svg" alt="Classes to Age Groups">
+              <img src="./img/classes/baykus.jpeg" alt="Classes to Age Groups">
               <span>
                 Discovery
               </span>
@@ -119,7 +119,7 @@
           </div>
           <div class="classes-age-groups">
             <div class="age-groups">
-              <img src="./img/frame.svg" alt="Classes to Age Groups">
+              <img src="./img/classes/maymun.jpeg" alt="Classes to Age Groups">
               <span>
                 Pre-School
               </span>
@@ -154,7 +154,7 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661120401689"></script>
+  <script src="dist/all.js?cb=1661710416974"></script>
 </body>
 
 </html>
