--- a/index.html
+++ b/index.html
@@ -18,29 +18,54 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- CSS File -->
-  <link rel="stylesheet" href="dist/style.css?cb=1661120401689">
+  <link rel="stylesheet" href="dist/style.css?cb=1661713402437">
 </head>
 
 <body>
-  
+
   <header class="header">
-    <nav class="nav-wrapper">
-      <div class="nav-container">
-        <a href="./whoAreWe.html" class="nav-links">Biz Kimiz</a>
-        <a href="./whatAreWeDoing.html" class="nav-links">Neler Yapıyoruz</a>
-        <a href="./classes.html" class="nav-links">Sınıflarımız</a>
-      </div>
+    <nav id="navigation">
+      <ul class="links">
+        <li><a href="#">Anasayfa</a></li>
+        <li class="dropdown"><a class="trigger-drop">Denizaltında Yaşam Sınıflarımız<i class="arrow"></i></a>
+          <ul class="drop">
+            <li><a href="./class-second.html">2 Yaş Sınıfımız (Koala)</a></li>
+            <li><a href="./class-third.html">3 Yaş Sınıfımız (Arı)</a></li>
+            <li><a href="./class-fourth.html">4 Yaş Sınıfımız (Bilgili Baykuş)</a></li>
+            <li><a href="./class-fifth.html">5 Yaş Sınıfımız (Dalgıç Maymun)</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a class="trigger-drop">Biz Kimiz<i class="arrow"></i></a>
+          <ul class="drop">
+            <li><a href="#">Hikayemiz</a></li>
+            <li><a href="#">Değerlerimiz</a></li>
+            <li><a href="#">Vizyonumuz</a></li>
+            <li><a href="#">Misyonumuz</a></li>
+          </ul>
+        </li>
+      </ul>
       <a class="nav-logo">
         <img src="./img/logo.svg" alt="Logo">
       </a>
-      <div class="nav-container">
-        <a href="./nutrition.html" class="nav-links">Beslenme</a>
-        <a href="./announcement.html" class="nav-links">Duyurular</a>
-        <a href="./gallery.html" class="nav-links">Galeri</a>
-        <a href="./contact.html" class="nav-links">İletişim</a>
-      </div>
+      <ul class="links">
+        <li><a href="#">Merak Ettikleriniz</a></li>
+        <li class="dropdown"><a class="trigger-drop">Aile Kulübümüz<i class="arrow"></i></a>
+          <ul class="drop">
+            <li><a href="#">İşbirliklerimiz</a></li>
+            <li><a href="#">Shopping</a></li>
+            <li><a href="#">Eğitim Planlama</a></li>
+            <li><a href="#">Psikolog</a></li>
+          </ul>
+        </li>
+        <li><a href="./contact.html">İletişim</a></li>
+      </ul>
     </nav>
+
     <nav class="nav-mobil-wrapper">
+      <a class="nav-mobil-logo">
+        <img src="./img/mini-logo.png" alt="">
+      </a>
+
       <div class="nav-bar-burger">
         <div class="nav-bar-burger-inc-1"></div>
         <div class="nav-bar-burger-inc-2"></div>
@@ -49,18 +74,39 @@
 
       <div class="mobil-menu">
         <div class="menu-overlay">
-          <div class="nav-bar-mobil">
-            <ul class="nav-bar-links-mobil">
-              <li><a class="selected">Ana Sayfa</a></li>
-              <li><a href="./whoAreWe.html">Biz Kimiz</a></li>
-              <li><a href="./whatAreWeDoing.html">Neler Yapıyoruz</a></li>
-              <li><a href="./classes.html">Sınıflarımız</a></li>
-              <li><a href="./nutrition.html">Beslenme</a></li>
-              <li><a href="./announcement.html">Duyurular</a></li>
-              <li><a href="./gallery.html">Galeri</a></li>
+          <nav id="navigation_mobil">
+            <ul class="links">
+              <li><a href="#">Anasayfa</a></li>
+              <li class="dropdown"><a class="trigger-drop">Denizaltında Yaşam Sınıflarımız<i class="arrow"></i></a>
+                <ul class="drop">
+                  <li><a href="./class-second.html">2 Yaş Sınıfımız (Koala)</a></li>
+                  <li><a href="./class-third.html">3 Yaş Sınıfımız (Arı)</a></li>
+                  <li><a href="./class-fourth.html">4 Yaş Sınıfımız (Bilgili Baykuş)</a></li>
+                  <li><a href="./class-fifth.html">5 Yaş Sınıfımız (Dalgıç Maymun)</a></li>
+                </ul>
+              </li>
+              <li class="dropdown"><a class="trigger-drop">Biz Kimiz<i class="arrow"></i></a>
+                <ul class="drop">
+                  <li><a href="#">Hikayemiz</a></li>
+                  <li><a href="#">Değerlerimiz</a></li>
+                  <li><a href="#">Vizyonumuz</a></li>
+                  <li><a href="#">Misyonumuz</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="links">
+              <li><a href="#">Merak Ettikleriniz</a></li>
+              <li class="dropdown"><a class="trigger-drop">Aile Kulübümüz<i class="arrow"></i></a>
+                <ul class="drop">
+                  <li><a href="#">İşbirliklerimiz</a></li>
+                  <li><a href="#">Shopping</a></li>
+                  <li><a href="#">Eğitim Planlama</a></li>
+                  <li><a href="#">Psikolog</a></li>
+                </ul>
+              </li>
               <li><a href="./contact.html">İletişim</a></li>
             </ul>
-          </div>
+          </nav>
         </div>
       </div>
     </nav>
@@ -74,7 +120,7 @@
     </div>
     <div class="content">
       <div class="activities">
-        <h2>Aktivitelerimiz</h2>
+        <h2>Submarine Kids</h2>
         <div class="activities-boards">
           <div class="activities-board">
             <div class="board-logo">
@@ -141,6 +187,107 @@
           ‘Small school that makes a BIG difference.’
         </p>
         <img class="divider-star" src="./img/star.svg" alt="">
+      </div>
+      <div class="workshops">
+        <h2>Workshops (Atölyeler)</h2>
+        <div class="workshops-boards">
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Kolaj ve Boya Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Kolaj ve Boya Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Tasarım Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Tasarım Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Sosyal Beceri Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Sosyal Beceri Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Mutfak Sanatları Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Mutfak Sanatları Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Akıl ve Zeka Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Akıl ve Zeka Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Baskı Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Baskı Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Görsel Sanatlar Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Görsel Sanatlar Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+          <div class="workshops-board">
+            <div class="workshops-board-container">
+              <div class="workshops-board-front-face">
+                <h4>Oyun Atölyeleri</h4>
+                <img src="./img/classes/1.jpg" alt="">
+              </div>
+              <div class="workshops-board-back-face">
+                <h4>Oyun Atölyeleri</h4>
+                <p>Bir takım Açıklamalar</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="education">
         <img src="./img/classmates_bags-min.jpeg" alt="Görsel">
@@ -259,7 +406,7 @@
   </footer>
 
   <!-- JavaScript File -->
-  <script src="dist/all.js?cb=1661120401689"></script>
+  <script src="dist/all.js?cb=1661713402437"></script>
   <script>
     const galleryPhotos = document.querySelector('.gallery-photos');
     const photos = document.querySelectorAll('.photos');
